# learn_ros2

./: .cursorrules
chap_navigation/fishbot_navigation2/: CMakeLists.txt  package.xml
chap_navigation/src/auto_patrol/: setup.py
chap_navigation/src/auto_patrol/auto_patrol/: image_safe.py  (+1 more)
chap_navigation/src/demo_description/: CMakeLists.txt  package.xml
chap_navigation/src/fishbot_application/: setup.py
chap_navigation/src/fishbot_navigation2/: CMakeLists.txt
chap_node/: novel1.txt  novel2.txt  novel3.txt
chap_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chap_node/log/: latest_build
chap_node/src/demo_cpp_pkg/: CMakeLists.txt
chap_node/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_lambda.cpp  learn_thread.cpp  person_node.cpp
chap_node/src/demo_python_pkg/: setup.py
chap_service/src/demo_cpp_service/: CMakeLists.txt  package.xml
chap_service/src/demo_python_pkg/: package.xml  setup.py
chap_service/src/interfaces/: CMakeLists.txt  package.xml
chap_tool/src/demo_cpp_tf/: CMakeLists.txt  package.xml
chap_tool/src/demo_python_tf/: package.xml  setup.py
chap_topic/install/: local_setup.sh  setup.sh
chap_topic/log/: latest_build
chap_topic/src/demo_cpp_topic/: CMakeLists.txt
chap_topic/src/demo_python_topic/: package.xml  setup.py
chap_topic/src/status_display/: CMakeLists.txt
chap_topic/src/status_pulisher/: package.xml  setup.cfg  setup.py
chapter_learn_plugin/src/auto_patrol/: package.xml  setup.cfg
chapter_learn_plugin/src/fishbot_application/: package.xml
chapter_learn_plugin/src/motion_control_system/: CMakeLists.txt  package.xml
chapter_learn_plugin/src/nav2_custom_controller/: CMakeLists.txt  package.xml
chapter_learn_plugin/src/nav2_custom_planner/: CMakeLists.txt  package.xml
(+95 files in other folders)
